// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineChartTRXDetails should render properly 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "paddingBottom": 20,
        "paddingHorizontal": 30,
        "paddingTop": 40,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          Object {
            "marginBottom": 20,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#0768FD",
            "borderBottomRightRadius": 0,
            "borderColor": "rgba(0, 0, 0, 0.29)",
            "borderRadius": 4,
            "borderStyle": "solid",
            "borderTopRightRadius": 0,
            "borderWidth": 0.5,
            "elevation": 0,
            "minWidth": 64,
            "opacity": 1,
            "width": "auto",
          }
        }
      >
        <View
          accessibilityComponentType="button"
          accessibilityRole="button"
          accessibilityStates={Array []}
          accessibilityTraits="button"
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onLayout={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          pointerEvents="box-only"
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Array [
                  Object {
                    "borderRadius": 4,
                  },
                  Array [
                    Object {
                      "backgroundColor": "#0768FD",
                      "borderColor": "rgba(0, 0, 0, 0.29)",
                      "borderRadius": 4,
                    },
                    Array [
                      Object {
                        "borderWidth": 0.5,
                      },
                      Object {
                        "borderBottomRightRadius": 0,
                        "borderTopRightRadius": 0,
                      },
                      undefined,
                    ],
                  ],
                ],
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  Object {
                    "height": 42,
                    "margin": 0,
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                      "writingDirection": "ltr",
                    },
                    Array [
                      Object {
                        "letterSpacing": 1,
                        "textAlign": "center",
                      },
                      undefined,
                      false,
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "marginHorizontal": 16,
                        "marginVertical": 9,
                      },
                      Object {
                        "fontFamily": "System",
                        "fontWeight": "500",
                      },
                      Object {
                        "color": "#ffffff",
                      },
                    ],
                  ]
                }
              >
                Sales Chart
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "borderRadius": 0,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "borderBottomLeftRadius": 0,
            "borderColor": "rgba(0, 0, 0, 0.29)",
            "borderLeftWidth": 0,
            "borderRadius": 4,
            "borderStyle": "solid",
            "borderTopLeftRadius": 0,
            "borderWidth": 0.5,
            "elevation": 0,
            "minWidth": 64,
            "opacity": 1,
            "width": "auto",
          }
        }
      >
        <View
          accessibilityComponentType="button"
          accessibilityRole="button"
          accessibilityStates={Array []}
          accessibilityTraits="button"
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onLayout={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          pointerEvents="box-only"
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Array [
                  Object {
                    "borderRadius": 4,
                  },
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderColor": "rgba(0, 0, 0, 0.29)",
                      "borderRadius": 4,
                    },
                    Array [
                      Object {
                        "borderWidth": 0.5,
                      },
                      Object {
                        "borderBottomLeftRadius": 0,
                        "borderLeftWidth": 0,
                        "borderTopLeftRadius": 0,
                      },
                      undefined,
                    ],
                  ],
                ],
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  Object {
                    "height": 42,
                    "margin": 0,
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                      "writingDirection": "ltr",
                    },
                    Array [
                      Object {
                        "letterSpacing": 1,
                        "textAlign": "center",
                      },
                      undefined,
                      false,
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "marginHorizontal": 16,
                        "marginVertical": 9,
                      },
                      Object {
                        "fontFamily": "System",
                        "fontWeight": "500",
                      },
                      Object {
                        "color": "rgba(0, 0, 0, 0.8)",
                      },
                    ],
                  ]
                }
              >
                Calls Per Month
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "borderRadius": 0,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "position": "absolute",
            "right": 0,
            "top": -90,
            "width": 250,
          }
        }
      >
        <View
          style={
            Object {
              "marginRight": 5,
              "paddingTop": 25,
            }
          }
        >
          <View
            accessibilityComponentType="button"
            accessibilityRole="button"
            accessibilityStates={
              Array [
                "disabled",
              ]
            }
            accessibilityTraits={
              Array [
                "button",
                "disabled",
              ]
            }
            accessible={true}
            centered={true}
            focusable={true}
            hitSlop={
              Object {
                "bottom": 6,
                "left": 6,
                "right": 6,
                "top": 6,
              }
            }
            onClick={[Function]}
            onLayout={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            pointerEvents="box-only"
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                      "margin": 6,
                      "overflow": "hidden",
                    },
                    Object {
                      "borderRadius": 22.5,
                      "height": 45,
                      "width": 45,
                    },
                    Object {
                      "opacity": 0.32,
                    },
                    undefined,
                  ],
                ]
              }
            >
              <View>
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Object {
                        "height": 30,
                        "width": 30,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "bottom": 0,
                        "left": 0,
                        "opacity": 1,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                        "transform": Array [
                          Object {
                            "rotate": "0deg",
                          },
                        ],
                      }
                    }
                  >
                    <Text
                      accessibilityElementsHidden={true}
                      allowFontScaling={false}
                      importantForAccessibility="no-hide-descendants"
                      pointerEvents="none"
                      style={
                        Array [
                          Object {
                            "color": "#2bb3fe",
                            "fontSize": 30,
                          },
                          Array [
                            Object {
                              "transform": Array [
                                Object {
                                  "scaleX": 1,
                                },
                              ],
                            },
                            Object {
                              "backgroundColor": "transparent",
                            },
                          ],
                          Object {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "bottom": 0,
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "borderRadius": 0,
                  },
                ]
              }
            />
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "width": 200,
              },
              undefined,
            ]
          }
        >
          <View>
            <Text
              style={
                Array [
                  Object {
                    "marginBottom": 8,
                  },
                  Object {
                    "color": undefined,
                    "fontFamily": "System",
                    "fontWeight": "400",
                  },
                ]
              }
            >
              Market
            </Text>
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  Object {
                    "backgroundColor": undefined,
                    "borderColor": "#d9d9d9",
                    "borderRadius": 4,
                    "borderWidth": 1,
                    "elevation": 0,
                    "height": 40,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "flex": 1,
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "paddingLeft": 8,
                  }
                }
              >
                <View
                  accessible={true}
                  focusable={true}
                  hitSlop={
                    Object {
                      "bottom": 14,
                      "left": 14,
                      "right": 14,
                      "top": 14,
                    }
                  }
                  isTVSelectable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "flex": 1,
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      Array [
                        Object {
                          "color": "rgba(0, 0, 0, 0.54)",
                          "fontFamily": "System",
                          "fontSize": 18,
                          "fontWeight": "400",
                          "paddingLeft": 8,
                        },
                      ]
                    }
                  >
                    Select market...
                  </Text>
                </View>
              </View>
              <View
                accessibilityComponentType="button"
                accessibilityRole="button"
                accessibilityStates={Array []}
                accessibilityTraits="button"
                accessible={true}
                centered={true}
                focusable={true}
                hitSlop={
                  Object {
                    "bottom": 6,
                    "left": 6,
                    "right": 6,
                    "top": 6,
                  }
                }
                onClick={[Function]}
                onLayout={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                pointerEvents="box-only"
              >
                <View
                  style={
                    Array [
                      Object {
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "alignItems": "center",
                          "justifyContent": "center",
                          "margin": 6,
                          "overflow": "hidden",
                        },
                        Object {
                          "borderRadius": 18,
                          "height": 36,
                          "width": 36,
                        },
                        false,
                        Object {
                          "margin": 0,
                        },
                      ],
                    ]
                  }
                >
                  <View>
                    <Text
                      accessibilityElementsHidden={true}
                      allowFontScaling={false}
                      importantForAccessibility="no-hide-descendants"
                      pointerEvents="none"
                      style={
                        Array [
                          Object {
                            "color": "#000000",
                            "fontSize": 24,
                          },
                          Array [
                            Object {
                              "transform": Array [
                                Object {
                                  "scaleX": 1,
                                },
                              ],
                            },
                            Object {
                              "backgroundColor": "transparent",
                            },
                          ],
                          Object {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "bottom": 0,
                        "left": 0,
                        "overflow": "hidden",
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      },
                      Object {
                        "borderRadius": 0,
                      },
                    ]
                  }
                />
              </View>
            </View>
          </View>
          <View
            collapsable={false}
          />
        </View>
      </View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "paddingTop": 50,
          }
        }
      >
        <Text>
          No Data Found
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`LineChartTRXDetails should render with Call selectedChart 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "paddingBottom": 20,
        "paddingHorizontal": 30,
        "paddingTop": 40,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          Object {
            "marginBottom": 20,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "borderBottomRightRadius": 0,
            "borderColor": "rgba(0, 0, 0, 0.29)",
            "borderRadius": 4,
            "borderStyle": "solid",
            "borderTopRightRadius": 0,
            "borderWidth": 0.5,
            "elevation": 0,
            "minWidth": 64,
            "opacity": 1,
            "width": "auto",
          }
        }
      >
        <View
          accessibilityComponentType="button"
          accessibilityRole="button"
          accessibilityStates={Array []}
          accessibilityTraits="button"
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onLayout={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          pointerEvents="box-only"
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Array [
                  Object {
                    "borderRadius": 4,
                  },
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderColor": "rgba(0, 0, 0, 0.29)",
                      "borderRadius": 4,
                    },
                    Array [
                      Object {
                        "borderWidth": 0.5,
                      },
                      Object {
                        "borderBottomRightRadius": 0,
                        "borderTopRightRadius": 0,
                      },
                      undefined,
                    ],
                  ],
                ],
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  Object {
                    "height": 42,
                    "margin": 0,
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                      "writingDirection": "ltr",
                    },
                    Array [
                      Object {
                        "letterSpacing": 1,
                        "textAlign": "center",
                      },
                      undefined,
                      false,
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "marginHorizontal": 16,
                        "marginVertical": 9,
                      },
                      Object {
                        "fontFamily": "System",
                        "fontWeight": "500",
                      },
                      Object {
                        "color": "rgba(0, 0, 0, 0.8)",
                      },
                    ],
                  ]
                }
              >
                Sales Chart
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "borderRadius": 0,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#0768FD",
            "borderBottomLeftRadius": 0,
            "borderColor": "rgba(0, 0, 0, 0.29)",
            "borderLeftWidth": 0,
            "borderRadius": 4,
            "borderStyle": "solid",
            "borderTopLeftRadius": 0,
            "borderWidth": 0.5,
            "elevation": 0,
            "minWidth": 64,
            "opacity": 1,
            "width": "auto",
          }
        }
      >
        <View
          accessibilityComponentType="button"
          accessibilityRole="button"
          accessibilityStates={Array []}
          accessibilityTraits="button"
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onLayout={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          pointerEvents="box-only"
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Array [
                  Object {
                    "borderRadius": 4,
                  },
                  Array [
                    Object {
                      "backgroundColor": "#0768FD",
                      "borderColor": "rgba(0, 0, 0, 0.29)",
                      "borderRadius": 4,
                    },
                    Array [
                      Object {
                        "borderWidth": 0.5,
                      },
                      Object {
                        "borderBottomLeftRadius": 0,
                        "borderLeftWidth": 0,
                        "borderTopLeftRadius": 0,
                      },
                      undefined,
                    ],
                  ],
                ],
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  Object {
                    "height": 42,
                    "margin": 0,
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                      "writingDirection": "ltr",
                    },
                    Array [
                      Object {
                        "letterSpacing": 1,
                        "textAlign": "center",
                      },
                      undefined,
                      false,
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "marginHorizontal": 16,
                        "marginVertical": 9,
                      },
                      Object {
                        "fontFamily": "System",
                        "fontWeight": "500",
                      },
                      Object {
                        "color": "#ffffff",
                      },
                    ],
                  ]
                }
              >
                Calls Per Month
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "borderRadius": 0,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "position": "absolute",
            "right": 0,
            "top": -65,
            "width": 250,
          }
        }
      >
        <View
          style={
            Object {
              "marginRight": 5,
            }
          }
        >
          <View
            accessibilityComponentType="button"
            accessibilityRole="button"
            accessibilityStates={
              Array [
                "disabled",
              ]
            }
            accessibilityTraits={
              Array [
                "button",
                "disabled",
              ]
            }
            accessible={true}
            centered={true}
            focusable={true}
            hitSlop={
              Object {
                "bottom": 6,
                "left": 6,
                "right": 6,
                "top": 6,
              }
            }
            onClick={[Function]}
            onLayout={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            pointerEvents="box-only"
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                      "margin": 6,
                      "overflow": "hidden",
                    },
                    Object {
                      "borderRadius": 22.5,
                      "height": 45,
                      "width": 45,
                    },
                    Object {
                      "opacity": 0.32,
                    },
                    undefined,
                  ],
                ]
              }
            >
              <View>
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Object {
                        "height": 30,
                        "width": 30,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "bottom": 0,
                        "left": 0,
                        "opacity": 1,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                        "transform": Array [
                          Object {
                            "rotate": "0deg",
                          },
                        ],
                      }
                    }
                  >
                    <Text
                      accessibilityElementsHidden={true}
                      allowFontScaling={false}
                      importantForAccessibility="no-hide-descendants"
                      pointerEvents="none"
                      style={
                        Array [
                          Object {
                            "color": "#2bb3fe",
                            "fontSize": 30,
                          },
                          Array [
                            Object {
                              "transform": Array [
                                Object {
                                  "scaleX": 1,
                                },
                              ],
                            },
                            Object {
                              "backgroundColor": "transparent",
                            },
                          ],
                          Object {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "bottom": 0,
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "borderRadius": 0,
                  },
                ]
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "borderColor": "#0768FD",
              "borderRadius": 4,
              "borderStyle": "solid",
              "borderWidth": 1,
              "color": "#2bb3fe",
              "elevation": 0,
              "fontSize": 16,
              "minWidth": 64,
              "opacity": 1,
              "width": "auto",
            }
          }
        >
          <View
            accessibilityComponentType="button"
            accessibilityRole="button"
            accessibilityStates={Array []}
            accessibilityTraits="button"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onLayout={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            pointerEvents="box-only"
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "borderRadius": 4,
                    },
                    undefined,
                  ],
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "marginBottom": -1,
                      "marginLeft": 12,
                      "marginRight": -4,
                      "width": 16,
                    }
                  }
                >
                  <Text
                    accessibilityElementsHidden={true}
                    allowFontScaling={false}
                    importantForAccessibility="no-hide-descendants"
                    pointerEvents="none"
                    style={
                      Array [
                        Object {
                          "color": "#0768FD",
                          "fontSize": 16,
                        },
                        Array [
                          Object {
                            "transform": Array [
                              Object {
                                "scaleX": 1,
                              },
                            ],
                          },
                          Object {
                            "backgroundColor": "transparent",
                          },
                        ],
                        Object {
                          "fontFamily": "Material Design Icons",
                          "fontStyle": "normal",
                          "fontWeight": "normal",
                        },
                        Object {},
                      ]
                    }
                  >
                    
                  </Text>
                </View>
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontWeight": "400",
                        "textAlign": "left",
                        "writingDirection": "ltr",
                      },
                      Array [
                        Object {
                          "letterSpacing": 1,
                          "textAlign": "center",
                        },
                        undefined,
                        false,
                        Object {
                          "color": "#0768FD",
                          "fontFamily": "System",
                          "fontSize": 16,
                          "fontWeight": "500",
                          "marginHorizontal": 16,
                          "marginVertical": 9,
                        },
                        Object {
                          "fontFamily": "System",
                          "fontWeight": "500",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  Call
                </Text>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "bottom": 0,
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "borderRadius": 0,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "padding": 20,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              Object {
                "paddingVertical": 10,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "height": 24,
                "opacity": 1,
                "width": 24,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 24,
                    "transform": Array [
                      Object {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 24,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "height": 12,
                      "overflow": "hidden",
                      "width": 24,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "height": 24,
                        "transform": Array [
                          Object {
                            "translateY": 0,
                          },
                          Object {
                            "rotate": "-165deg",
                          },
                        ],
                        "width": 24,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        Object {
                          "height": 12,
                          "overflow": "hidden",
                          "width": 24,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "borderColor": "#0768FD",
                            "borderRadius": 12,
                            "borderWidth": 2.4,
                            "height": 24,
                            "width": 24,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                style={
                  Object {
                    "height": 24,
                    "transform": Array [
                      Object {
                        "rotate": "45deg",
                      },
                    ],
                    "width": 24,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    Object {
                      "height": 12,
                      "overflow": "hidden",
                      "top": 12,
                      "width": 24,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "height": 24,
                        "transform": Array [
                          Object {
                            "translateY": -12,
                          },
                          Object {
                            "rotate": "345deg",
                          },
                        ],
                        "width": 24,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        Object {
                          "height": 12,
                          "overflow": "hidden",
                          "width": 24,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "borderColor": "#0768FD",
                            "borderRadius": 12,
                            "borderWidth": 2.4,
                            "height": 24,
                            "width": 24,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`LineChartTRXDetails should render with networkReachabilityStatus error 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "paddingBottom": 20,
        "paddingHorizontal": 30,
        "paddingTop": 40,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          Object {
            "marginBottom": 20,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#0768FD",
            "borderBottomRightRadius": 0,
            "borderColor": "rgba(0, 0, 0, 0.29)",
            "borderRadius": 4,
            "borderStyle": "solid",
            "borderTopRightRadius": 0,
            "borderWidth": 0.5,
            "elevation": 0,
            "minWidth": 64,
            "opacity": 1,
            "width": "auto",
          }
        }
      >
        <View
          accessibilityComponentType="button"
          accessibilityRole="button"
          accessibilityStates={Array []}
          accessibilityTraits="button"
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onLayout={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          pointerEvents="box-only"
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Array [
                  Object {
                    "borderRadius": 4,
                  },
                  Array [
                    Object {
                      "backgroundColor": "#0768FD",
                      "borderColor": "rgba(0, 0, 0, 0.29)",
                      "borderRadius": 4,
                    },
                    Array [
                      Object {
                        "borderWidth": 0.5,
                      },
                      Object {
                        "borderBottomRightRadius": 0,
                        "borderTopRightRadius": 0,
                      },
                      undefined,
                    ],
                  ],
                ],
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  Object {
                    "height": 42,
                    "margin": 0,
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                      "writingDirection": "ltr",
                    },
                    Array [
                      Object {
                        "letterSpacing": 1,
                        "textAlign": "center",
                      },
                      undefined,
                      false,
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "marginHorizontal": 16,
                        "marginVertical": 9,
                      },
                      Object {
                        "fontFamily": "System",
                        "fontWeight": "500",
                      },
                      Object {
                        "color": "#ffffff",
                      },
                    ],
                  ]
                }
              >
                Sales Chart
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "borderRadius": 0,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "borderBottomLeftRadius": 0,
            "borderColor": "rgba(0, 0, 0, 0.29)",
            "borderLeftWidth": 0,
            "borderRadius": 4,
            "borderStyle": "solid",
            "borderTopLeftRadius": 0,
            "borderWidth": 0.5,
            "elevation": 0,
            "minWidth": 64,
            "opacity": 1,
            "width": "auto",
          }
        }
      >
        <View
          accessibilityComponentType="button"
          accessibilityRole="button"
          accessibilityStates={Array []}
          accessibilityTraits="button"
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onLayout={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          pointerEvents="box-only"
        >
          <View
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Array [
                  Object {
                    "borderRadius": 4,
                  },
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderColor": "rgba(0, 0, 0, 0.29)",
                      "borderRadius": 4,
                    },
                    Array [
                      Object {
                        "borderWidth": 0.5,
                      },
                      Object {
                        "borderBottomLeftRadius": 0,
                        "borderLeftWidth": 0,
                        "borderTopLeftRadius": 0,
                      },
                      undefined,
                    ],
                  ],
                ],
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  Object {
                    "height": 42,
                    "margin": 0,
                  },
                ]
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                      "writingDirection": "ltr",
                    },
                    Array [
                      Object {
                        "letterSpacing": 1,
                        "textAlign": "center",
                      },
                      undefined,
                      false,
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "marginHorizontal": 16,
                        "marginVertical": 9,
                      },
                      Object {
                        "fontFamily": "System",
                        "fontWeight": "500",
                      },
                      Object {
                        "color": "rgba(0, 0, 0, 0.8)",
                      },
                    ],
                  ]
                }
              >
                Calls Per Month
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "borderRadius": 0,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "position": "absolute",
            "right": 0,
            "top": -90,
            "width": 250,
          }
        }
      >
        <View
          style={
            Object {
              "marginRight": 5,
              "paddingTop": 25,
            }
          }
        >
          <View
            accessibilityComponentType="button"
            accessibilityRole="button"
            accessibilityStates={
              Array [
                "disabled",
              ]
            }
            accessibilityTraits={
              Array [
                "button",
                "disabled",
              ]
            }
            accessible={true}
            centered={true}
            focusable={true}
            hitSlop={
              Object {
                "bottom": 6,
                "left": 6,
                "right": 6,
                "top": 6,
              }
            }
            onClick={[Function]}
            onLayout={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            pointerEvents="box-only"
          >
            <View
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                      "margin": 6,
                      "overflow": "hidden",
                    },
                    Object {
                      "borderRadius": 22.5,
                      "height": 45,
                      "width": 45,
                    },
                    Object {
                      "opacity": 0.32,
                    },
                    undefined,
                  ],
                ]
              }
            >
              <View>
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Object {
                        "height": 30,
                        "width": 30,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "bottom": 0,
                        "left": 0,
                        "opacity": 1,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                        "transform": Array [
                          Object {
                            "rotate": "0deg",
                          },
                        ],
                      }
                    }
                  >
                    <Text
                      accessibilityElementsHidden={true}
                      allowFontScaling={false}
                      importantForAccessibility="no-hide-descendants"
                      pointerEvents="none"
                      style={
                        Array [
                          Object {
                            "color": "#2bb3fe",
                            "fontSize": 30,
                          },
                          Array [
                            Object {
                              "transform": Array [
                                Object {
                                  "scaleX": 1,
                                },
                              ],
                            },
                            Object {
                              "backgroundColor": "transparent",
                            },
                          ],
                          Object {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "bottom": 0,
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "borderRadius": 0,
                  },
                ]
              }
            />
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "width": 200,
              },
              undefined,
            ]
          }
        >
          <View>
            <Text
              style={
                Array [
                  Object {
                    "marginBottom": 8,
                  },
                  Object {
                    "color": undefined,
                    "fontFamily": "System",
                    "fontWeight": "400",
                  },
                ]
              }
            >
              Market
            </Text>
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  Object {
                    "backgroundColor": undefined,
                    "borderColor": "#d9d9d9",
                    "borderRadius": 4,
                    "borderWidth": 1,
                    "elevation": 0,
                    "height": 40,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "flex": 1,
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "paddingLeft": 8,
                  }
                }
              >
                <View
                  accessible={true}
                  focusable={true}
                  hitSlop={
                    Object {
                      "bottom": 14,
                      "left": 14,
                      "right": 14,
                      "top": 14,
                    }
                  }
                  isTVSelectable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "flex": 1,
                      "opacity": 1,
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      Array [
                        Object {
                          "color": "rgba(0, 0, 0, 0.54)",
                          "fontFamily": "System",
                          "fontSize": 18,
                          "fontWeight": "400",
                          "paddingLeft": 8,
                        },
                      ]
                    }
                  >
                    Select market...
                  </Text>
                </View>
              </View>
              <View
                accessibilityComponentType="button"
                accessibilityRole="button"
                accessibilityStates={Array []}
                accessibilityTraits="button"
                accessible={true}
                centered={true}
                focusable={true}
                hitSlop={
                  Object {
                    "bottom": 6,
                    "left": 6,
                    "right": 6,
                    "top": 6,
                  }
                }
                onClick={[Function]}
                onLayout={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                pointerEvents="box-only"
              >
                <View
                  style={
                    Array [
                      Object {
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "alignItems": "center",
                          "justifyContent": "center",
                          "margin": 6,
                          "overflow": "hidden",
                        },
                        Object {
                          "borderRadius": 18,
                          "height": 36,
                          "width": 36,
                        },
                        false,
                        Object {
                          "margin": 0,
                        },
                      ],
                    ]
                  }
                >
                  <View>
                    <Text
                      accessibilityElementsHidden={true}
                      allowFontScaling={false}
                      importantForAccessibility="no-hide-descendants"
                      pointerEvents="none"
                      style={
                        Array [
                          Object {
                            "color": "#000000",
                            "fontSize": 24,
                          },
                          Array [
                            Object {
                              "transform": Array [
                                Object {
                                  "scaleX": 1,
                                },
                              ],
                            },
                            Object {
                              "backgroundColor": "transparent",
                            },
                          ],
                          Object {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "bottom": 0,
                        "left": 0,
                        "overflow": "hidden",
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      },
                      Object {
                        "borderRadius": 0,
                      },
                    ]
                  }
                />
              </View>
            </View>
          </View>
          <View
            collapsable={false}
          />
        </View>
      </View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "paddingTop": 50,
          }
        }
      >
        <Text>
          No Data Found
        </Text>
      </View>
    </View>
  </View>
</View>
`;
